--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,305 +3,82 @@
 
 @string{aps = {American Physical Society,}}
 
-@Conference{Tokatli2023,
-  author =	 {Tokatli, O. and Harwin, W.},
-  title =	 {Robot Haptics for Robust and Resilient Autonomous Non-prehensile Manipulation},
-  booktitle =	 {The International Conference on Robotics and
-                  Automation (ICRA) (submitted)},
-  year =	 {2023}
+@book{einstein1956investigations,
+  bibtex_show={true},
+  title={Investigations on the Theory of the Brownian Movement},
+  author={Einstein, Albert},
+  year={1956},
+  publisher={Courier Corporation},
+  preview={brownian-motion.gif}
 }
 
-@Article{LopezPulgarin2022,
-  author = {Lopez Pulgarin, E. J. and Tokatli, O. and Burroughes, G. and Herrmann, G.},
-  title = {Operator performance analysis in tele-manipulation},
-  journal = {Frontiers (under review)},
-  year = {2022},
-}
-
-@Article{Tokatli2021a,
-  author = {Tokatli, O. and Das, P. and Nath, R. and Pangione, L. and
-            Altobelli, A. and Burroughes, G. and Jonasson, E. T. and Turner, M.
-            F. and Skilton, R.},
-  title = {Robot-Assisted Glovebox Teleoperation for Nuclear Industry},
-  journal = {Robotics},
-  volume = {10},
-  year = {2021},
-  number = {3},
-}
-
-@Article{Webb2021,
-  author =	 {Webb, M. E. and Tracey, M. and Harwin, W. and Tokatli, O. and
-             Hwang, F. and Johnson, R. and Barrett, N. and Jones, C.},
-  title =	 {Haptic-enabled collaborative learning in virtual reality for schools},
-  journal =	 {Education and Information Technologies},
-  year =	 {2021},
-  volume =	 {27},
-  number =	 {1}
-}
-
-@Article{Altobelli2021a,
-  author =	 {Altobelli, A. and Tokatli, O. and
-                  Burroughes, G. and Skilton, R.},
-  title =	 {Optimal Grasping Pose Synthesis in a Constrained
-                  Environment},
-  journal =	 {Robotics},
-  year =	 {2021},
-  volume =	 {10},
-  number =	 {1}
-}
-
-@Article{Aydin2018,
-  author =	 {Aydin, Y. and Tokatli, O. and Patoglu, V.
-                  and Basdogan, C.},
-  title =	 {Stable Physical Human-Robot Interaction Using
-                  Fractional Order Admittance Control},
-  journal =	 {IEEE Transactions on Haptics},
-  year =	 {2018},
-  volume={11},
-  number={3},
-}
-
-@Article{Tokatli2010f,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Nonovershooting Force Control of a Series Elastic
-                  Actuator},
-  journal =	 {Solid State Phenomenon},
-  year =	 {2010},
-  volume = {166},
-}
-
-@Unpublished{Tokatli2018a,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Fractional Order Control in Haptics},
-  journal =	 {IEEE Transactions on Robotics},
-}
-
-@Unpublished{Tokatli2018b,
-  author =	 {Lopez Pulgarin, E. J. and Tokatli, O. and Burroughes, G. and Herrmann, G.},
-  title =	 {Digital twins for teleoperation of robotic gloveboxes in maintenance tasks},
-  journal =	 {Frontiers},
-}
-
-@Unpublished{Tokatli2018d,
-	author = {Tokatli, O. and Burroughes, G.},
-	title = {Multicriteria IK: an inverse kinematics algorithm for redundant manipulators},
-	journal = {Robotics},
-}
-
-% @Unpublished{Tokatli2018b,
-%   author =	 {Tokatli, O. and Tracey, M. and Hwang, F.
-%                   and Barrett, N. and Jones, C. and Webb, M.
-%                   and Harwin, W.},
-%   title =	 {Technology Enhanced Learning using Haptics},
-%   journal =	 {International Journal of Human-Computer Studies},
-% }
-
-@Article{Otaran2021,
-  author =	 {Otaran, A. and Tokatli, O. and Patoglu, V.},
-  title =	 {Physical Human-Robot Interaction Using HANDSON-SEA:
-                  An Educational Robotic Platform with Series Elastic
-                  Actuation},
-  journal =	 {IEEE Transactions on Haptics},
-  year =	 {2021},
-  volume={14},
-  number={4},
-}
-
-@Conference{Otaran2018b,
-  author =	 {Otaran, A. and Tokatli, O. and Patoglu, V.},
-  title =	 {HandsOn-Computing: Promoting Algorithmic Thinking
-                  Through Haptic Educational Robots},
-  booktitle =	 {EuroHaptics},
-  year =	 {2018}
-}
-
-@Conference{Tokatli2018c,
-  author =	 {Tokatli, O. and Tracey, M. and Hwang, F.
-                  and Barrett, N. and Jones, C. and Webb, M.
-                  and Harwin, W.},
-  title =	 {A Classroom Deployment of a Haptic System for
-                  Learning Cell Biology},
-  booktitle =	 {EuroHaptics},
-  year =	 {2018}
-}
-
-@Conference{Aydin2017,
-  author =	 {Aydin, Y. and Tokatli, O. and Patoglu, V.
-                  and Basdogan, C.},
-  title =	 {Fractional Order Admittance Control for Physical
-                  Human-Robot Interaction},
-  booktitle =	 {IEEE World Haptics},
-  year =	 {2017}
-}
-
-@Conference{Otaran2016,
-  author =	 {Otaran, A. and Tokatli, O. and Patoglu, V.},
-  title =	 {Hands-On Learning with a Series Elastic Educational
-                  Robot},
-  booktitle =	 {EuroHaptics},
-  year =	 {2016}
-}
-
-@Conference{Tokatli2015a,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Generalized Virtual Environment Models for Haptic
-                  Rendering},
-  booktitle =	 {Symposium on Theory of Machines and
-                  Mechanisms(TrISToMM)},
-  year =	 {2015}
-}
-
-@Conference{Tokatli2015b,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Stability of Haptic Systems with Fractional Order
-                  Controllers},
-  booktitle =	 {IEEE/RSJ International Conference on Intelligent
-                  Robotsand Systems (IROS)},
-  year =	 {2015}
-}
-
-@Conference{Tokatli2015c,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Using Fractional Order Elements for Haptic
-                  Rendering},
-  booktitle =	 {International Symposium on Robotics Research (ISRR)},
-  year =	 {2015}
-}
-
-@Conference{Tokatli2011a,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Design of a Compliant Manipulator for Removing
-                  Malign Cancer Tissue Through Hydrodynamic
-                  Cavitation},
-  booktitle =	 {ECCOMAS Multibody Dynamics},
-  year =	 {2011}
-}
-
-@CONFERENCE {Tokatli2011b,
-    author    = "Tokatli, O. and Patoglu, V.",
-    title     = "Series Elastic Actuation for Force Controlled Micro-Manipulation",
-    booktitle = "IEEE International Conference on Mechatronics",
-    year      = "2011"
-}
-
-@Conference{Tokatli2010a,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Nonovershooting Force Control of a Series Elastic
-                  Actuator},
-  booktitle =	 {IEEE International Conference on Mechatronics},
-  year =	 {2010}
-}
-
-@Conference{Tokatli2010b,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Optimal Design of a Series Elastic Actuator},
-  booktitle =	 {ASME International Design Engineering Technical
-                  Conferences and Computers and Information
-                  Engineering Conference},
-  year =	 {2010}
-}
-
-@Conference{Tokatli2010c,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Robust Optimal Design of a Micro Gripper},
-  booktitle =	 {The First Joint Conference on Multibody System
-                  Dynamics},
-  year =	 {2010}
-}
-
-@Conference{Tokatli2010d,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Robust Optimal Design of a Micro Series Elastic
-                  Actuator},
-  booktitle =	 {AzCIFToMM International Symposium of Mechanisms and
-                  Machine Science},
-  year =	 {2010}
-}
-
-@Conference{Tokatli2010e,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Seri Elastik Eyleyicinin Tasarimi ve Denetimi
-                  (Design and Control of a Series Elastic Actuator)},
-  booktitle =	 {Otomatik Kontrol Ulusal Toplantisi},
-  year =	 {2010}
-}
-
-@CONFERENCE{Tokatli2009,
-  author =	 {Tokatli, O. and Patoglu, V.},
-  title =	 {Multi-Criteria Optimization of a Compliant Half
-                  Pantograph},
-  booktitle =	 {ECCOMAS Multibody Dynamics},
-  year =	 {2009}
-}
-
-@Article{Aydin2020a,
-  author =	 {Aydin, Y. and Tokatli, O. and Patoglu, V.
-                  and Basdogan, C.},
-  title =	 {A Computational Multi-criteria Optimization Approach
-                  to Interaction Controller Design for pHRI Systems},
-  journal =	 {Transactions on Robotics},
-  year =	 {2020},
-  volume={36},
+@article{einstein1950meaning,
+  abbr={AJP},
+  bibtex_show={true},
+  title={The meaning of relativity},
+  author={Einstein, Albert and Taub, AH},
+  journal={American Journal of Physics},
+  volume={18},
   number={6},
+  pages={403--404},
+  year={1950},
+  publisher={American Association of Physics Teachers}
 }
 
-@Conference{Sirintuna2020,
-  author =	 {Sirintuna, D. and Aydin, Y. and Caldiran, O.
-                  and Tokatli, O. and Patoglu, V. and Basdogan,
-                  C.},
-  title =	 {A Variable-Fractional Order Admittance Controller
-                  for pHRI},
-  booktitle =	 {The International Conference on Robotics and
-                  Automation (ICRA)},
-  year =	 {2020}
+@article{PhysRev.47.777,
+  abbr={PhysRev},
+  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  author={Einstein, A. and Podolsky, B. and Rosen, N.},
+  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+  journal={Phys. Rev.},
+  volume={47},
+  issue={10},
+  pages={777--780},
+  numpages={0},
+  year={1935},
+  month={May},
+  publisher=aps,
+  doi={10.1103/PhysRev.47.777},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
+  altmetric={248277},
+  dimensions={true},
+  selected={true}
 }
 
-@Conference{Webb2017,
-  author =	 {Webb, M. and Tracey, M. and Harwin, W. and
-                  Tokatli, O. and Hwang, F. and Johnson, R. and
-                  Barrett, N. and Jones, C.},
-  title =	 {The potential for haptic-enabled interaction to
-                  support collaborative learning in school biology},
-  booktitle =	 {Society for Information Technology and Teacher
-                  Education},
-  year =	 {2017},
+@article{einstein1905molekularkinetischen,
+  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
+  author={Einstein, A.},
+  journal={Annalen der physik},
+  volume={322},
+  number={8},
+  pages={549--560},
+  year={1905},
+  publisher={Wiley Online Library}
 }
 
-@Conference{Webb2019a,
-  author =	 {Webb, M. and Tracey, M. and Harwin, W. and
-                  Tokatli, O. and Hwang, F. and Barrett,
-                  N. and Jones, C. and Johnson, R.},
-  title =	 {An Investigation of the Impact of Haptics for
-                  Promoting Understanding of Difficult Concepts in
-                  Cell Biology},
-  year =	 {2019},
-  booktitle =	 {Open Conference on Computers in Education},
+@article{einstein1905movement,
+  abbr={Ann. Phys.},
+  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
+  author={Einstein, A.},
+  journal={Ann. Phys.},
+  volume={17},
+  pages={549--560},
+  year={1905}
 }
 
-@Conference{Webb2019b,
-  author =	 {Webb, M. and Tracey, M. and Harwin, W. and
-                  Tokatli, O. and Hwang, F. and Johnson, R. and
-                  Barrett, N. and Jones, C.},
-  title =	 {Design Considerations for Haptic-Enabled Virtual
-                  Reality Simulation for Interactive Learning of
-                  Nanoscale Science in Schools},
-  year =	 {2019},
-  booktitle =	 {International Conference on Immersive Learning},
+@article{einstein1905electrodynamics,
+  title={On the electrodynamics of moving bodies},
+  author={Einstein, A.},
+  year={1905}
 }
 
-@Mastersthesis{Tokatli_master,
-  author =	 {Tokatli, O.},
-  title =	 {Robust optimal design and control of a micro series
-                  elastic actuator},
-  school =	 {Sabanci University},
-  year =	 {2010},
-  address =	 {Istanbul, Turkey},
-}
-
-@Phdthesis{Tokatli_phd,
-  author =	 {Tokatli, O.},
-  title =	 {Fractional order control in haptics},
-  school =	 {Sabanci University},
-  year =	 {2010},
-  address =	 {Istanbul, Turkey},
+@book{przibram1967letters,
+  bibtex_show={true},
+  title={Letters on wave mechanics},
+  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
+  year={1967},
+  publisher={Vision},
+  preview={wave-mechanics.gif}
 }
